// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ast widgets <AssigneeUserSelect/> render() should render a dropdown with selected value 1`] = `
<div
  style="display: inline-block; vertical-align: middle;"
>
  <div>
    <div
      class="dropdown"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class=""
        data-toggle="dropdown"
      >
        <div
          class="select dropdown-toggle"
        >
          <span
            class="label"
            style="min-width: 10px; opacity: 1;"
          >
            Agent 1
          </span>
          <input
            autocomplete="chrome-off"
            class="input"
            style="min-width: 10px;"
            type="text"
            value=""
          />
          <i
            class="material-icons dropdownIcon"
          >
            arrow_drop_down
          </i>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="options dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        
        <button
          class="option option--focused dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            Agent 2
          </span>
        </button>
        <button
          class="option dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            Agent 3
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ast widgets <AssigneeUserSelect/> render() should render a dropdown without "Unassign" option 1`] = `
<div
  style="display: inline-block; vertical-align: middle;"
>
  <div>
    <div
      class="dropdown"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class=""
        data-toggle="dropdown"
      >
        <div
          class="select dropdown-toggle"
        >
          <span
            class="label"
            style="min-width: 10px; opacity: 1;"
          >
            Agent 1
          </span>
          <input
            autocomplete="chrome-off"
            class="input"
            style="min-width: 10px;"
            type="text"
            value=""
          />
          <i
            class="material-icons dropdownIcon"
          >
            arrow_drop_down
          </i>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="options dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        
        <button
          class="option option--focused dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            Agent 2
          </span>
        </button>
        <button
          class="option dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            Agent 3
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ast widgets <AssigneeUserSelect/> render() should render a dropdown without selected value 1`] = `
<div
  style="display: inline-block; vertical-align: middle;"
>
  <div>
    <div
      class="dropdown"
    >
      <div
        aria-expanded="false"
        aria-haspopup="true"
        class=""
        data-toggle="dropdown"
      >
        <div
          class="select dropdown-toggle"
        >
          <span
            class="label placeholder"
            style="min-width: 10px; opacity: 1;"
          >
            Select an option
          </span>
          <input
            autocomplete="chrome-off"
            class="input"
            style="min-width: 10px;"
            type="text"
            value=""
          />
          <i
            class="material-icons dropdownIcon"
          >
            arrow_drop_down
          </i>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="options dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        
        <button
          class="option option--focused dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            Agent 1
          </span>
        </button>
        <button
          class="option dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            Agent 2
          </span>
        </button>
        <button
          class="option dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            Agent 3
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ast widgets <AssigneeUserSelect/> render() should render a loading message because agents have not been fetched yet 1`] = `
<span
  class="text-muted ml-2"
>
  Loading agents...
</span>
`;
